3034/Programming/3034/primerexamen_segundaparte/errors.txt
clang++ src/main.cpp -o build/a.out -Wall -Werror -Wextra
src/main.cpp:180:17: error: no matching constructor for initialization of 'std::vector<Employee>'
        auto payroll = std::vector<Employee>(size, "", "", 0.0, 0.0);
                       ^                     ~~~~~~~~~~~~~~~~~~~~~~
/usr/bin/../lib64/gcc/x86_64-pc-linux-gnu/13.2.1/../../../../include/c++/13.2.1/bits/stl_vector.h:566:7: note: candidate constructor not viable: requires at most 3 arguments, but 5 were provided
      vector(size_type __n, const value_type& __value,
      ^
/usr/bin/../lib64/gcc/x86_64-pc-linux-gnu/13.2.1/../../../../include/c++/13.2.1/bits/stl_vector.h:632:7: note: candidate constructor not viable: requires 3 arguments, but 5 were provided
      vector(vector&& __rv, const allocator_type& __m, true_type) noexcept
      ^
/usr/bin/../lib64/gcc/x86_64-pc-linux-gnu/13.2.1/../../../../include/c++/13.2.1/bits/stl_vector.h:637:7: note: candidate constructor not viable: requires 3 arguments, but 5 were provided
      vector(vector&& __rv, const allocator_type& __m, false_type)
      ^
/usr/bin/../lib64/gcc/x86_64-pc-linux-gnu/13.2.1/../../../../include/c++/13.2.1/bits/stl_vector.h:704:2: note: candidate constructor template not viable: requires at most 3 arguments, but 5 were provided
        vector(_InputIterator __first, _InputIterator __last,
        ^
/usr/bin/../lib64/gcc/x86_64-pc-linux-gnu/13.2.1/../../../../include/c++/13.2.1/bits/stl_vector.h:553:7: note: candidate constructor not viable: requires at most 2 arguments, but 5 were provided
      vector(size_type __n, const allocator_type& __a = allocator_type())
      ^
/usr/bin/../lib64/gcc/x86_64-pc-linux-gnu/13.2.1/../../../../include/c++/13.2.1/bits/stl_vector.h:621:7: note: candidate constructor not viable: requires 2 arguments, but 5 were provided
      vector(const vector& __x, const __type_identity_t<allocator_type>& __a)
      ^
/usr/bin/../lib64/gcc/x86_64-pc-linux-gnu/13.2.1/../../../../include/c++/13.2.1/bits/stl_vector.h:656:7: note: candidate constructor not viable: requires 2 arguments, but 5 were provided
      vector(vector&& __rv, const __type_identity_t<allocator_type>& __m)
      ^
/usr/bin/../lib64/gcc/x86_64-pc-linux-gnu/13.2.1/../../../../include/c++/13.2.1/bits/stl_vector.h:675:7: note: candidate constructor not viable: requires at most 2 arguments, but 5 were provided
      vector(initializer_list<value_type> __l,
      ^
/usr/bin/../lib64/gcc/x86_64-pc-linux-gnu/13.2.1/../../../../include/c++/13.2.1/bits/stl_vector.h:539:7: note: candidate constructor not viable: requires single argument '__a', but 5 arguments were provided
      vector(const allocator_type& __a) _GLIBCXX_NOEXCEPT
      ^
/usr/bin/../lib64/gcc/x86_64-pc-linux-gnu/13.2.1/../../../../include/c++/13.2.1/bits/stl_vector.h:598:7: note: candidate constructor not viable: requires single argument '__x', but 5 arguments were provided
      vector(const vector& __x)
      ^
/usr/bin/../lib64/gcc/x86_64-pc-linux-gnu/13.2.1/../../../../include/c++/13.2.1/bits/stl_vector.h:617:7: note: candidate constructor not viable: requires 1 argument, but 5 were provided
      vector(vector&&) noexcept = default;
      ^
/usr/bin/../lib64/gcc/x86_64-pc-linux-gnu/13.2.1/../../../../include/c++/13.2.1/bits/stl_vector.h:528:7: note: candidate constructor not viable: requires 0 arguments, but 5 were provided
      vector() = default;
      ^
1 error generated.
make: *** [Makefile:9: build] Error 1
